--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -44,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Factura:"
+        android:text="Tipo de Factura:"
         android:textSize="25sp"
         android:textColor="@color/black"/>
     <TextView
