--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -18,7 +18,11 @@
         android:id="@+id/homeFragment"
         android:name="com.empresadeapp.quilmesapp.ui.home.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_destacadoFragment"
+            app:destination="@id/destacadoFragment" />
+    </fragment>
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.empresadeapp.quilmesapp.ui.order.OrderFragment"
@@ -33,4 +37,9 @@
             android:id="@+id/action_profileFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/destacadoFragment"
+        android:name="com.empresadeapp.quilmesapp.ui.home.destacado.DestacadoFragment"
+        android:label="fragment_destacado"
+        tools:layout="@layout/fragment_destacado" />
 </navigation>
