--- a/app/src/main/res/layout/fragment_destacado.xml
+++ b/app/src/main/res/layout/fragment_destacado.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/item_producto"/>
 
 </FrameLayout>
