--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,8 +42,8 @@
         android:id="@+id/button_carrito"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="60dp"
         android:text="carrito"
-        android:visibility="visible"/>
+        android:visibility="gone"/>
 
 </LinearLayout>
