--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,10 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.detail.DetailFragment">
+    tools:context=".ui.home.detail.DetailFragment"
+    android:gravity="center">
+
+    <LinearLayout
+        android:id="@+id/item_detail"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/producto_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Producto"
+            android:layout_margin="15dp"
+            android:textSize="20dp"
+            android:gravity="center"/>
+        <ImageView
+            android:id="@+id/image_item"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@mipmap/ic_launcher"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/button_menos"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="-"
+                android:background="@android:color/holo_blue_bright"
+                android:layout_marginStart="50sp"
+                android:layout_marginTop="15sp"
+                android:textSize="20sp"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/cantidad_item"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:layout_marginStart="30sp"
+                android:layout_marginTop="15sp"
+                android:textSize="20sp"
+                android:gravity="center"/>
+
+            <TextView
+                android:id="@+id/button_mas"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:background="@android:color/holo_blue_bright"
+                android:layout_marginStart="30sp"
+                android:layout_marginTop="15sp"
+                android:layout_marginBottom="15sp"
+                android:textSize="20sp"
+                android:gravity="center"/>
+        </LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Agregar al carrito"
+            android:layout_gravity="center"/>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+
+
+
+
+</LinearLayout>
